# bazel-javascript

./: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  defs.bzl  package.json  rules.bzl  run_yarn.js  ts_binary_compile.js  ts_library_compile.js  ts_library_generate_full_src.js  ts_script_compile.js  tsconfig.json
.circleci/: config.yml
example/: package.json
example/src/: BUILD
example/src/nested/: BUILD  constants.ts
example/src/react/: BUILD
example/src/react/.storybook/: config.js
example/storybook/: BUILD
examples/: WORKSPACE
examples/node-typescript-app/: BUILD.bazel  README.md  WORKSPACE  package.json  skaffold.yaml  tsconfig.json
examples/node-typescript-app/helm/: README.md
examples/node-typescript-app/helm/my-service/: Chart.yaml  values.yaml
examples/node-typescript-app/helm/my-service/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
examples/node-typescript-app/libs/shared-package/: BUILD.bazel  common.ts  greeter.ts
examples/node-typescript-app/services/base-image/: BUILD.bazel
examples/node-typescript-app/services/my-service/: BUILD.bazel
examples/node-typescript-app/services/my-service/server/: BUILD.bazel  server.ts
examples/react/: BUILD  WORKSPACE  package.json  tsconfig.json
examples/react-app-javascript/: BUILD.bazel  WORKSPACE  package.json
examples/react-app-javascript/public/: BUILD.bazel
examples/react-app-javascript/src/: BUILD.bazel
examples/react-app-typescript/: BUILD.bazel  WORKSPACE  package.json
examples/react-app-typescript/public/: BUILD.bazel
examples/react-app-typescript/src/: App.css  App.tsx  BUILD.bazel  registerServiceWorker.ts
examples/react-storybook-typescript/: BUILD.bazel  WORKSPACE  package.json
examples/react-storybook-typescript/src/: BUILD.bazel  component.story.tsx  component1.tsx  component2.css  component2.tsx
examples/react/src/: BUILD
examples/react/src/.storybook/: config.js
examples/simple/: BUILD  BUILD.bazel  WORKSPACE  package.json
examples/simple/src/: BUILD  main.ts
examples/simple/src/util/: BUILD  constants.ts
internal/: BUILD  BUILD.bazel  package.json
internal/common/: BUILD.bazel  context.bzl  index.js  run_yarn.js  symlink.js
internal/common/actions/: BUILD.bazel  actions.bzl
internal/common/actions/create_source_dir/: BUILD.bazel  action.bzl  create_source_dir.js
internal/common/actions/run_js/: BUILD.bazel  BazelAction.js  README.md  action.bzl
internal/js_binary/: BUILD.bazel  compile.js  rule.bzl
internal/js_binary/webpack/: BUILD
internal/js_bundle/: BUILD  compile.js  rule.bzl
internal/js_library/: BUILD  BUILD.bazel  compile.js  create_full_src.js  rule.bzl
internal/js_module/: rule.bzl
internal/js_script/: compile.js
internal/js_script_and_test/: BUILD.bazel  compile.js  rule.bzl
internal/npm_binary/: BUILD.bazel  rule.bzl
internal/npm_packages/: BUILD  BUILD.bazel  install.js  rule.bzl
internal/npm_packages/empty/: BUILD  BUILD.bazel
internal/ts_binary/: compile.js
internal/ts_binary/webpack/: BUILD  package.json
internal/ts_common/: BUILD  download_external_deps.js  run_yarn.js
internal/ts_library/: BUILD  BUILD.bazel  compile.js  create_full_src.js  default_tsconfig.json  rule.bzl  transpile.js  tsconfig.gen.js
internal/ts_script/: BUILD  compile.js
internal/web_bundle/: BUILD  BUILD.bazel  compile.js  create_webpack_config.js  default.index.html  dev_server_options.js  rule.bzl
src/: BUILD  logger.ts  main.ts
src/nested/: BUILD  constants.ts
src/react/: BUILD  component.story.tsx
storybook/: BUILD
test/: BUILD  package.json  tsconfig.json
test/src/: BUILD  BUILD.bazel
test/src/nested/: BUILD  constants.ts  nodeps.ts
test/src/react/: BUILD  component.tsx  component1.css
test/src/react/.storybook/: config.js
test/src/testing/: BUILD  BUILD.bazel
test/storybook/: BUILD
tests/examples/react-app/: BUILD.bazel  package.json
tests/examples/react-app/src/: BUILD.bazel
tests/js-binary/: BUILD  BUILD.bazel
tests/js-binary/src/: BUILD.bazel
tests/js-bundle/: BUILD  BUILD.bazel
tests/js-bundle/src/: BUILD  main.js
tests/js-library-complex/: BUILD  BUILD.bazel  package.json
tests/js-library-complex/nested/: BUILD  BUILD.bazel  combined.js
tests/js-library-complex/nested/deep/: BUILD  BUILD.bazel
tests/js-library-no-deps/: BUILD  BUILD.bazel
tests/js-script-and-test/: BUILD  BUILD.bazel  example.spec.js
tests/npm-binary/: BUILD  package.json
tests/npm-binary/storybook/: BUILD  BUILD.bazel
tests/ts-example/: BUILD.bazel
tests/ts-example/src/: BUILD.bazel  logger.ts  main.ts
tests/ts-example/src/nested/: BUILD.bazel  nodeps.ts  suffix.ts
tests/ts-example/src/react/: BUILD.bazel  component.story.tsx  component1.tsx  component2.tsx
tests/ts-example/src/react/.storybook/: config.ts
tests/ts-example/src/testing/: BUILD.bazel  sum.spec.ts
ts_binary/: compile.js  create_full_src.js
ts_common/: dependencies_map.js  run_yarn.js
ts_library/: BUILD  create_full_src.js
ts_script/: compile.js
