package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

## The Backend Base Image
container_image(
    name = "service",
    base = "@node_alpine_image//image:image",
    stamp = True,
    workdir = "/app",
)
