package(default_visibility = ["//visibility:public"])

load("//:defs.bzl", "js_library")

js_library(
  name = "index",
  srcs = [
    "index.js",
    "index.css",
  ],
  deps = [
    ":App",
    ":serviceworker",
    "//tests/examples/react-app:packages",
  ],
  requires = [
    "react",
    "react-dom",
  ],
)

js_library(
  name = "App",
  srcs = [
    "App.js",
    "App.css",
    ":assets",
  ],
  deps = [
    "//tests/examples/react-app:packages",
  ],
  requires = [
    "react",
  ],
)

filegroup(
  name = "assets",
  srcs = [
    "logo.svg",
  ],
)

js_library(
  name = "serviceworker",
  srcs = [
    "registerServiceWorker.js",
  ],
)
