package(default_visibility = ["//visibility:public"])

load("//:defs.bzl", "ts_library")

ts_library(
  name = "constants",
  srcs = [
    "constants.ts",
  ],
  deps = [
    ":nodeps",
    "//tests/ts-example/src/testing:sum",
    "//tests/ts-example:packages",
  ],
  requires = [
    "textbuilder",
  ],
  tsconfig = "//tests/ts-example:tsconfig.json",
)

ts_library(
  name = "nodeps",
  srcs = [
    "nodeps.ts",
    "suffix.ts",
  ],
  tsconfig = "//tests/ts-example:tsconfig.json",
)
