package(default_visibility = ["//visibility:public"])

load("//:defs.bzl", "js_test")
load("//:defs.bzl", "ts_library")

ts_library(
    name = "sum",
    srcs = [
        "sum.ts",
    ],
    tsconfig = "//tests/ts-example:tsconfig.json",
)

ts_library(
    name = "sum_test_lib",
    srcs = [
        "sum.spec.ts",
    ],
    tsconfig = "//tests/ts-example:tsconfig.json",
    deps = [
        ":sum",
        "//tests/ts-example:packages",
    ],
)

js_test(
    name = "sum_test",
    cmd = "jest sum.spec.js",
    lib = ":sum_test_lib",
)
